JUPYTER/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  selector:
    matchLabels:
      app: worker-pod
  replicas: 3
  template:
    metadata:
      labels:
        app: worker-pod
    spec:
      containers:
      - name: worker
        image: agalrui/debian-ipython-wn
        # command: [ /bin/sh ]
        # args: [-c,while true;do sleep 20;done]

        volumeMounts:
        - name: worker-volumen
          mountPath: /home/jupyter/.ipython/profile_default/security/
      volumes:
        - name: worker-volumen
          configMap:
            name: ipythonconf-wn
            items:
            - key: ipcontroller-engine.json
              path: ipcontroller-engine.json
