JUPYTER/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyter-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: my-service  # Nombre del servicio que quieres exponer
            port:
              number: 80  # Puerto del servicio Jupyter
